Update config for fork

--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ email: fits@monashclubs.org
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to WIRED! We are the official Faculty of IT student societ at
   Monash University, Clayton.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/wired-website" # the subpath of your site, e.g. /blog
 url: "https://wired.org.au" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username: wired-admin
+github_username: oneiriac
 
 # Collections
 # Collections dir: add collections as subdirs here (e.g. "books" collection as collections/_books)
